Implemented importing existing CCV and added automatic section lookup.

--- a/canadianccv/tests/toml_files/course2.toml
+++ b/canadianccv/tests/toml_files/course2.toml
@@ -1,4 +1,4 @@
-"Course Code"= "CCV XXXX"
+"Course Code"= "CCV YYYY"
 "Course Title"= "CCV course"
 "Course Topic"= "CCV parsing"
 "Course Level"= "Graduate"
